--- a/tests/unit_tests/meson.build
+++ b/tests/unit_tests/meson.build
@@ -1,5 +1,9 @@
 
 unit_tests_srcs = [
+    'meta/sequence/empty_tests.cpp',
+    'meta/sequence/push_back_tests.cpp',
+    'meta/sequence/push_front_tests.cpp',
+    'meta/sequence/size_tests.cpp',
     'main.cpp',
 ]
 
